--- a/.github/workflows/update-reading.yml
+++ b/.github/workflows/update-reading.yml
@@ -1,131 +1,93 @@
 name: Update Reading & Sync Portfolio
-
 on:
   push:
     paths:
       - "README.md"
+      - "**/*.md" # Also trigger when you update a review file
   workflow_dispatch:
-
 jobs:
   sync-content:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Personal Library
+      - name: Checkout Repos
         uses: actions/checkout@v4
         with:
           path: personal-library
-
-      - name: Checkout Profile Repo
-        uses: actions/checkout@v4
-        with:
-          repository: GabrielBaiano/GabrielBaiano
-          path: GabrielBaiano
-          token: ${{ secrets.PAT_TOKEN }}
-
+          
       - name: Checkout Portfolio Repo
         uses: actions/checkout@v4
         with:
           repository: GabrielBaiano/A-new-type-portifolio
           path: portfolio
           token: ${{ secrets.PAT_TOKEN }}
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Run Profile Update Script
-        run: |
-          cd personal-library
-          if [ -f "scripts/update-reading.js" ]; then
-            node scripts/update-reading.js
-          else
-            echo "Warning: scripts/update-reading.js not found, skipping profile update."
-          fi
-
-      - name: Parse and Update Reviews JSON
+      - name: Parse and Update Portfolio
         uses: actions/github-script@v7
         with:
           script: |
             const fs = require('fs');
             const path = require('path');
-
-            const readmePath = path.join(process.env.GITHUB_WORKSPACE, 'personal-library/README.md');
+            const libraryPath = path.join(process.env.GITHUB_WORKSPACE, 'personal-library');
+            const readmePath = path.join(libraryPath, 'README.md');
             const targetJsonPath = path.join(process.env.GITHUB_WORKSPACE, 'portfolio/data/reviews.json');
-
-            if (!fs.existsSync(readmePath)) {
-                console.log('README not found');
-                return;
-            }
+            if (!fs.existsSync(readmePath)) return;
             const content = fs.readFileSync(readmePath, 'utf8');
-
-            // Regex Updated for your specific HTML Format
             const regex = /<td[^>]*>[\s\S]*?<img src="([^"]+)"[^>]*width="120"[\s\S]*?<a[^>]*><b>([^<]+)<\/b><\/a>[\s\S]*?Status: <b>([^<]+)<\/b>/g;
             
             const books = [];
             let match;
             while ((match = regex.exec(content)) !== null) {
+                const title = match[2].trim();
                 const rawStatus = match[3];
                 const cleanStatus = rawStatus.includes('Reading') ? 'Reading' : 'Finished';
-
+                
+                // Normalizing title for folder search (e.g. "Os Bórgias" -> "os_borgias")
+                const folderName = title.toLowerCase()
+                    .normalize("NFD").replace(/[\u0300-\u036f]/g, "") // Remove accents
+                    .replace(/\s+/g, '_')
+                    .replace(/[^a-z0-9_]/g, '');
+                let reviewContent = null;
+                
+                if (cleanStatus === 'Finished') {
+                    // Search in 2026/, 2025/, special_recomendações/
+                    const possibleDirs = ['2026', '2025', 'special_recomendações', 'special_recomendações/recommendations'];
+                    for (const dir of possibleDirs) {
+                        const bookDir = path.join(libraryPath, dir, folderName);
+                        if (fs.existsSync(bookDir)) {
+                            const files = fs.readdirSync(bookDir);
+                            const mdFile = files.find(f => f.endsWith('.md'));
+                            if (mdFile) {
+                                reviewContent = fs.readFileSync(path.join(bookDir, mdFile), 'utf8');
+                                break;
+                            }
+                        }
+                    }
+                }
                 books.push({
                     image: match[1],
-                    title: match[2],
+                    title: title,
                     status: cleanStatus,
+                    content: reviewContent,
                     tag: 'Book',
-                    id: match[2].toLowerCase().replace(/[^a-z0-9]/g, '-').replace(/-+/g, '-'),
+                    id: folderName.replace(/_/g, '-'),
                     link: 'https://github.com/GabrielBaiano/personal-library',
                     date: new Date().toISOString().split('T')[0]
                 });
             }
-
-            console.log(`Parsed ${books.length} books.`);
-
             let currentData = { shelves: [], reviews: [] };
              if (fs.existsSync(targetJsonPath)) {
                 try {
                     currentData = JSON.parse(fs.readFileSync(targetJsonPath, 'utf8'));
-                } catch (e) { console.log('Error reading existing JSON, starting fresh'); }
+                } catch (e) {}
             }
             currentData.reviews = books;
-
             fs.writeFileSync(targetJsonPath, JSON.stringify(currentData, null, 2));
-
-      - name: Commit Portfolio Updates
+      - name: Commit Change
         run: |
           cd portfolio
           git config user.name "github-actions"
           git config user.email "actions@github.com"
           git add data/reviews.json
           if [[ -n $(git status -s) ]]; then
-            git commit -m "feat(content): Sync books from personal-library"
+            git commit -m "feat(content): Sync books and detailed reviews"
             git push
-          else
-            echo "No changes to commit in Portfolio"
-          fi
-
-      - name: Commit Profile Updates
-        run: |
-          cd GabrielBaiano
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
-          if [[ -n $(git status -s) ]]; then
-            git add README.md
-            git commit -m "chore: update reading books"
-            git push
-          else
-            echo "No changes to commit in Profile"
-          fi
-
-      - name: Commit Library Updates
-        run: |
-          cd personal-library
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
-          if [[ -n $(git status -s) ]]; then
-            git add README.md
-            git commit -m "chore: sync reading markers"
-            git push
-          else
-            echo "No changes to commit in Library"
           fi
